took the logic to the back end

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_BACKEND_URL=https://shielded-peak-12230.herokuapp.com/
+REACT_APP_BACKEND_URL=ws://localhost:7071
 
-<!-- CHANGE URL TO ws://localhost:7070 -->
+<!-- CHANGE URL TO ws://localhost:7070
+https://shielded-peak-12230.herokuapp.com/-->
