--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL=ws://localhost:7071
+REACT_APP_BACKEND_URL=https://shielded-peak-12230.herokuapp.com/
 
-<!-- CHANGE URL TO ws://localhost:7070
+<!-- CHANGE URL TO ws://localhost:7071
 https://shielded-peak-12230.herokuapp.com/-->
